docs/api/qiskit/0.25/qiskit.pulse.MeasureChannel.mdx
---
title: MeasureChannel
description: API reference for qiskit.pulse.MeasureChannel
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.pulse.MeasureChannel
---

# qiskit.pulse.MeasureChannel

<Class id="qiskit.pulse.MeasureChannel" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.17/qiskit/pulse/channels.py" signature="MeasureChannel(index)" modifiers="class">
  Measure channels transmit measurement stimulus pulses for readout.

  Channel class.

  **Parameters**

  **index** (`int`) – Index of channel.

  ### \_\_init\_\_

  <Function id="qiskit.pulse.MeasureChannel.__init__" signature="__init__(index)">
    Channel class.

    **Parameters**

    **index** (`int`) – Index of channel.
  </Function>

  ## Methods

  |                                                                                                                      |                                                                  |
  | -------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------- |
  | [`__init__`](#qiskit.pulse.MeasureChannel.__init__ "qiskit.pulse.MeasureChannel.__init__")(index)                    | Channel class.                                                   |
  | [`assign`](#qiskit.pulse.MeasureChannel.assign "qiskit.pulse.MeasureChannel.assign")(parameter, value)               | Return a new channel with the input Parameter assigned to value. |
  | [`is_parameterized`](#qiskit.pulse.MeasureChannel.is_parameterized "qiskit.pulse.MeasureChannel.is_parameterized")() | Return True iff the channel is parameterized.                    |

  ## Attributes

  |                                                                                                  |                                                                                    |
  | ------------------------------------------------------------------------------------------------ | ---------------------------------------------------------------------------------- |
  | [`index`](#qiskit.pulse.MeasureChannel.index "qiskit.pulse.MeasureChannel.index")                | Return the index of this channel.                                                  |
  | [`name`](#qiskit.pulse.MeasureChannel.name "qiskit.pulse.MeasureChannel.name")                   | Return the shorthand alias for this channel, which is based on its type and index. |
  | [`parameters`](#qiskit.pulse.MeasureChannel.parameters "qiskit.pulse.MeasureChannel.parameters") | Parameters which determine the channel index.                                      |
  | `prefix`                                                                                         |                                                                                    |

  ## Members list

  ### assign

  <Function id="qiskit.pulse.MeasureChannel.assign" signature="assign(parameter, value)">
    Return a new channel with the input Parameter assigned to value.

    **Parameters**

    *   **parameter** (`Parameter`) – A parameter in this expression whose value will be updated.
    *   **value** (`Union`\[`ParameterExpression`, `float`, `int`]) – The new value to bind to.

    **Return type**

    [`Channel`](qiskit.pulse.channels#channel "qiskit.pulse.channels.Channel")

    **Returns**

    A new channel with updated parameters.

    **Raises**

    [**PulseError**](qiskit.pulse.PulseError "qiskit.pulse.PulseError") – If the parameter is not present in the channel.
  </Function>

  ### index

  <Attribute id="qiskit.pulse.MeasureChannel.index">
    Return the index of this channel. The index is a label for a control signal line typically mapped trivially to a qubit index. For instance, `DriveChannel(0)` labels the signal line driving the qubit labeled with index 0.

    **Return type**

    `Union`\[`int`, `ParameterExpression`]
  </Attribute>

  ### is\_parameterized

  <Function id="qiskit.pulse.MeasureChannel.is_parameterized" signature="is_parameterized()">
    Return True iff the channel is parameterized.

    **Return type**

    `bool`
  </Function>

  ### name

  <Attribute id="qiskit.pulse.MeasureChannel.name">
    Return the shorthand alias for this channel, which is based on its type and index.

    **Return type**

    `str`
  </Attribute>

  ### parameters

  <Attribute id="qiskit.pulse.MeasureChannel.parameters">
    Parameters which determine the channel index.

    **Return type**

    `Set`
  </Attribute>
</Class>

